add a blog section

--- a/restaurant/templates/details_item.html
+++ b/restaurant/templates/details_item.html
@@ -20,6 +20,7 @@
                 <li><a href="{% url 'index' %}">Home</a></li>
                 <li><a href="{% url 'edit' item.id %}">Edit</a></li>
                 <li><a href="{% url 'delete' item.id %}">Delete</a></li>
+                 <li><a href="{% url 'blog' %}">Blog</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="{% url 'contact' %}" target="_blank">Contect</a></li>
             </ul>
@@ -32,6 +33,7 @@
                 <li><a href="{% url 'index' %}">Home</a></li>
                 <li><a href="{% url 'edit' item.id %}">Edit</a></li>
                 <li><a href="{% url 'delete' item.id %}">Delete</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
                 <li><a href="">Chef</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="{% url 'contact' %}">Contect</a></li>
