--- a/restaurant/templates/index.html
+++ b/restaurant/templates/index.html
@@ -34,6 +34,7 @@
             <ul>
                 <li><a href="{% url 'index' %}" id="home">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
                 <li><a href="#chef">Chef</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="{% url 'add' %}">AddItem</a></li>
@@ -47,6 +48,7 @@
             <ul>
                 <li><a href="{% url 'index' %}" id="home">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
                 <li><a href="#chef">Chef</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="{% url 'add' %}">AddItem</a></li>
