--- a/restaurant/templates/contact.html
+++ b/restaurant/templates/contact.html
@@ -23,6 +23,7 @@
             <ul>
                 <li><a href="{% url 'index' %}" id="home">Home</a></li>
                 <li><a href="#menu">Menu</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
                 <li><a href="#chef">Chef</a></li>
                 <li><a href="#about">About</a></li>
                 <li><a href="{% url 'contact' %}" target="_blank"">Contect</a></li>
@@ -35,6 +36,7 @@
             <ul>
                 <li><a href="{% url 'index' %}">Home</a></li>
                 <li><a href="">Menu</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
                 <li><a href="">Chef</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="{% url 'contact' %}" target="_blank"">Contect</a></li>
