--- a/restaurant/templates/index.html
+++ b/restaurant/templates/index.html
@@ -39,6 +39,8 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="{% url 'add' %}">AddItem</a></li>
                 <li><a href="{% url 'contact' %}" target="_blank">Contect</a></li>
+                <li><a href="{% url 'add_blog' %}">Add Blog</a></li>
+                
             </ul>
             <div id="phone">
                 <a href="tel:++91234567892">+91234567892</a>
@@ -53,6 +55,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="{% url 'add' %}">AddItem</a></li>
                 <li><a href="{% url 'contact' %}" target="_blank">Contect</a></li>
+                <li><a href="{% url 'add_blog' %}">Add Blog</a></li>
             </ul>
         </div>
     </div>
