--- a/restaurant/templates/add_item.html
+++ b/restaurant/templates/add_item.html
@@ -9,6 +9,11 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+   
+
+
+
+    <!-- header section end -->
     <div class="add-container">
         <h1>Add New Menu Item</h1>
 
