--- a/restaurant/templates/delete_item.html
+++ b/restaurant/templates/delete_item.html
@@ -9,6 +9,42 @@
     <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
+   
+
+    <!-- header section -->
+    <div id="header">
+        <nav id="navbar">
+            <h1>Madu Resturant</h1>
+            <ul>
+                <li><a href="{% url 'index' %}" id="home">Home</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
+                <li><a href="#chef">Chef</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="{% url 'add' %}">AddItem</a></li>
+                <li><a href="{% url 'contact' %}" target="_blank">Contect</a></li>
+                <li><a href="{% url 'add_blog' %}">Add Blog</a></li>
+                
+            </ul>
+            <div id="phone">
+                <a href="tel:++91234567892">+91234567892</a>
+            </div>
+        </nav>
+        <div id="mobile_menu">
+            <ul>
+                <li><a href="{% url 'index' %}" id="home">Home</a></li>
+                <li><a href="#menu">Menu</a></li>
+                <li><a href="{% url 'blog' %}">Blog</a></li>
+                <li><a href="#chef">Chef</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="{% url 'add' %}">AddItem</a></li>
+                <li><a href="{% url 'contact' %}" target="_blank">Contect</a></li>
+                <li><a href="{% url 'add_blog' %}">Add Blog</a></li>
+            </ul>
+        </div>
+    </div>
+
+    <!-- header section end -->
     <div class="container">
         <h1>Are you sure you want to delete {{ item.name }}?</h1>
         <p>This action cannot be undone.</p>
